test/sema/generic-constraint-non-interface-type.delta.output
generic-constraint-non-interface-type.delta:4:11: error: only interface types can be used as generic constraints
void f<T: Foo>() {}
          ^
generic-constraint-non-interface-type.delta:4:6: warning: unused declaration 'f'
void f<T: Foo>() {}
     ^
