test/sema/generic-constraint-non-interface-type.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:11: error: only interface types can be used as generic constraints
void f<T: Foo>() {}

struct Foo {}
